@@ -3,6 +3,9 @@ Changelog
 
 In next release
 
+- If the supplied ``context`` and ``request`` parameters are trivial,
+  get them from the view instance. [malthe]
+
 - Expressions in text templates are never escaped. [malthe]
 
 - Do not bind template to a trivial instance. [malthe]
